--- a/style.css
+++ b/style.css
@@ -317,10 +317,10 @@ section {
 }
 
 .home {
-    margin-top: 4rem;
+    margin-top: 5rem;
     display: flex;
     align-items: center;
-    padding: 0 9%;
+    padding: 2rem 9% 0 9%;
     height: 100vh;
     padding-bottom: 4rem;
 }
